input[type=range]: Updating step attribute should align the value to steps.

BUG=633074

Review-Url: https://codereview.chromium.org/2366753004
Cr-Commit-Position: refs/heads/master@{#420798}

Former-commit-id: 14d43b4c79aeb380ef35fa9167ccd955fd1d32d1